Update server URLs and add final deployment guide

--- a/MobileSalesApp/Info.plist
+++ b/MobileSalesApp/Info.plist
@@ -44,7 +44,7 @@
                            <key>NSExceptionRequiresForwardSecrecy</key>
                            <false/>
                        </dict>
-                       <key>big-beautiful-api-server.alma29v1.repl.co</key>
+                       <key>big-beautiful-server.alma29v1.repl.co</key>
                        <dict>
                            <key>NSExceptionAllowsInsecureHTTPLoads</key>
                            <false/>
