Update iOS app with all latest features and improvements

--- a/MobileSalesApp/Info.plist
+++ b/MobileSalesApp/Info.plist
@@ -44,7 +44,7 @@
                            <key>NSExceptionRequiresForwardSecrecy</key>
                            <false/>
                        </dict>
-                       <key>big-beautiful-server.alma29v1.repl.co</key>
+                                               <key>7a2267f8-a906-4411-876f-ceea687a67a1-00-z79wgepfvad4.kirk.replit.dev</key>
                        <dict>
                            <key>NSExceptionAllowsInsecureHTTPLoads</key>
                            <false/>
